Bug 426979 - Message boxes always show "Do not ask again"
Summary: Message boxes always show "Do not ask again"
Status: RESOLVED FIXED
Alias: None
Product: kdialog
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.08
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Brad Hards
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-26 02:52 UTC by Grósz Dániel
Modified: 2020-09-28 08:04 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.08.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Grósz Dániel 2020-09-26 02:52:30 UTC
SUMMARY
Message boxes such as --msgbox, --sorry, --error etc. always show the "Do not ask again" checkbox, even if the --dontagain option is not specified. One would expect it to be shown only if the --dontagain option is there, and if I recall correctly, that was the earlier behavior.

STEPS TO REPRODUCE
kdialog --msgbox Hello

SOFTWARE/OS VERSIONS
Linux: 5.6.4
openSUSE Tumbleweed 20200923
KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.19.5
KDE Frameworks Version: 5.74.0
KDE Applications / kdialog version: 20.08.1
Qt Version: 5.15.1
Comment 1 Bug Janitor Service 2020-09-27 07:58:35 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kdialog/-/merge_requests/1
Comment 2 Ömer Fadıl USTA 2020-09-27 08:07:22 UTC
@Grósz Dániel : I have prepared an small patch and believe that it will be landed as soon as possible. You can check the status from https://invent.kde.org/utilities/kdialog/-/merge_requests/1
Comment 3 Ömer Fadıl USTA 2020-09-28 07:38:17 UTC
Git commit 4d64f16ea85a0aaaa9c9c0a1e0ec2691426a75ab by Ömer Fadıl USTA.
Committed on 27/09/2020 at 11:39.
Pushed by usta into branch 'master'.

[kdialog] Fixes the always asking even without dontagain flag usage

Normally it must just ask "Do not ask again?" question whenever used with --dontagain flag
on the other hand it was always asking. This little patch fixes this problem.

FIXED-IN: 20.08.2

M  +1    -1    src/kdialog.cpp

https://invent.kde.org/utilities/kdialog/commit/4d64f16ea85a0aaaa9c9c0a1e0ec2691426a75ab
Comment 4 Ömer Fadıl USTA 2020-09-28 08:04:29 UTC
Git commit 2fd7c381e713de5a229fbfca2c48cdabbe7579ae by Ömer Fadıl Usta, on behalf of Ömer Fadıl USTA.
Committed on 28/09/2020 at 08:04.
Pushed by usta into branch 'cherry-pick-4d64f16e'.

[kdialog] Fixes the always asking even without dontagain flag usage

Normally it must just ask "Do not ask again?" question whenever used with --dontagain flag
on the other hand it was always asking. This little patch fixes this problem.

FIXED-IN: 20.08.2


(cherry picked from commit 4d64f16ea85a0aaaa9c9c0a1e0ec2691426a75ab)

M  +1    -1    src/kdialog.cpp

https://invent.kde.org/utilities/kdialog/commit/2fd7c381e713de5a229fbfca2c48cdabbe7579ae