[kdialog] Fixes the always asking even without dontagain flag usage

Normally it must just ask "Do not ask again?" question whenever used with --dontagain flag
on the other hand it was always asking. This little patch fixes this problem.

FIXED-IN: 20.08.2
BUG: 426979


(cherry picked from commit 4d64f16ea85a0aaaa9c9c0a1e0ec2691426a75ab)